Fix list item text overflow behaviour

--- a/src/styles/ListItem.module.css
+++ b/src/styles/ListItem.module.css
@@ -20,14 +20,15 @@
 .item-details{
     display: flex;
     margin: auto auto auto 0;
-    flex-grow: 1;
+    min-width: 0;
 }
 
 .list-item p, .list-item-hidden p{
     font-size: 16px;
     min-width: 0; /*fix flex child not wrapping*/
-    overflow-wrap: break-word;
-    max-width: 60vw;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .list-item p{
